# dev

AutoDev/: .env
AutoDev/rsshub/: .env  docker-compose.yml
CladueDev/: .cursorrules
CursorDev/SafariBookMark/: beautify_bookmarks.py  requirements.txt  tailwind.config.js
DEMO/: demo.json  demo.md  dockerfile  index.html
DesignCode/: index.html
ExpoentDev/: package-lock.json  package.json  tailwind.config.js
FLuxDev/: demo.py
GithubDev/GPT-Automator-main/: README.md  commands.py  main.py  pyproject.toml  requirements.txt  test_ollama.py
GoogleAI/: 144.md  Gmail.md  market-research.md  products.md  prompt.md  template-products.md
GroqDev/: chat_assistant.py
JavaScript/: README.md  arry.js  dom.html  index.html  jiegoufuzhi.js  jsinport.html  main.js  makedom.html  object.js  output.md  package.json  pdf.py  qiyu.js
JavaScriptZHi/: main.js  numbertransform.js
JsLearn/: flex.css  flex.html  flexlearn.html  index.html
Nebius/: run.py
NvidiaDev/: llama3.1nvidiachat.py
Prompt Engineer/: claudeprompt.md  shadcnUI-en.md  shadcnUI.md
Resume/: resume.html
agent.exe-main/: .eslintrc.js  README.md  package-lock.json  package.json
bolt.new-main/: CyberYI_PFS_Prompt.txt  问题解决步骤.txt
craftx/: extension.js  manifest.json  project-structure
exponent-dev/: package-lock.json  package.json
nextJS/: package-lock.json  package.json
quickstart/: README.md  package.json
supabase/: config.toml
tailwindcssDev/: .cursorrules  README.md  Tailwindcss工具类.md  tailwind.config.js  示例.css
𝕏 AI/: .env  app.py  config.py  langsmith_config.py  requirements.txt
(+378 files in other folders)
